[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme/theme_gray.tres" type="Theme" id=1]
[ext_resource path="res://scene/gui/RandomSampleColorDialog.gd" type="Script" id=2]

[node name="RandomSampleColorDialog" type="ConfirmationDialog"]
margin_right = 350.0
margin_bottom = 160.0
rect_min_size = Vector2( 350, 190 )
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Randomize Sample Colors"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 334.0
margin_bottom = 139.0

[node name="MinCompHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 334.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MinCompHbox"]
margin_right = 225.0
margin_bottom = 29.0
rect_min_size = Vector2( 225, 0 )
text = "Darkest Color Value: "
align = 2

[node name="MinCompSpinbox" type="SpinBox" parent="MarginContainer/VBoxContainer/MinCompHbox"]
margin_left = 229.0
margin_right = 334.0
margin_bottom = 29.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.15
align = 1

[node name="MaxCompHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 334.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MaxCompHbox"]
margin_right = 225.0
margin_bottom = 29.0
rect_min_size = Vector2( 225, 0 )
text = "Brightest Color Value: "
align = 2

[node name="MaxCompSpinbox" type="SpinBox" parent="MarginContainer/VBoxContainer/MaxCompHbox"]
margin_left = 229.0
margin_right = 334.0
margin_bottom = 29.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.85
align = 1

[node name="OpacityCompHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 334.0
margin_bottom = 95.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/OpacityCompHbox"]
margin_right = 225.0
margin_bottom = 29.0
rect_min_size = Vector2( 225, 0 )
text = "Opacity: "
align = 2

[node name="OpacitySpinbox" type="SpinBox" parent="MarginContainer/VBoxContainer/OpacityCompHbox"]
margin_left = 229.0
margin_right = 334.0
margin_bottom = 29.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0
align = 1

[node name="VisibleOnlyHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 334.0
margin_bottom = 128.0
alignment = 2

[node name="VisibleOnlyCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/VisibleOnlyHbox"]
margin_left = 44.0
margin_right = 334.0
margin_bottom = 29.0
pressed = true
text = "Change Visible Samples Only"
